# otus-cpp-15

./: .travis.yml  CMakeLists.txt  README.md  bintray.json
data/: kkmeans_ex.txt
inc/: clusterer.hpp  get_arg.hpp
src/: clusterer.cpp  get_arg.cpp  main.cpp
utils/: make_data.py  make_diag.py  travis-stat.sh
